tests/ui/fail/empty_call.stderr
error: Potentially invalid expansion. Expected an expression, an identifier, `::`, `<`, `Self`, `break` or 13 others.
 --> tests/ui/fail/empty_call.rs:6:11
  |
6 |     () => {};
  |           ^^
